Added text to include updated info about changes in government policy circa 2025

--- a/pages/BackgroundChecks.html
+++ b/pages/BackgroundChecks.html
@@ -2,6 +2,8 @@
     Background Checks
 </h2>
 <p>
+    <b>2025 UPDATE: These steps should stay the same since name changes are handled in state courts, and none of the steps really require you out yourself. </b>
+    <br><br>
     For a name change, you will need to get a state and 
     a federal background check,
     and you will need to get fingerprinted for each. 
