--- a/pages/CourtDocuments.html
+++ b/pages/CourtDocuments.html
@@ -2,6 +2,8 @@
     Court Documents
 </h2>
 <p>
+    <b>2025 UPDATE: Changing your name is done through state courts, so this <i>should</i> still be the same.</b>
+    <br><br>
     Once you have the results from your background checks, 
     you can start the name change process, using documents
     that you will file with your county court.
