--- a/pages/IDDocuments.html
+++ b/pages/IDDocuments.html
@@ -16,9 +16,9 @@
     Your local social security office can be found 
      <a href="https://secure.ssa.gov/ICON/main.jsp" target="_blank" rel="noopener noreferrer">here</a>. 
     You will need to bring your court order and the 
-    linked form. While you are updating your name, 
+    linked form. <s>While you are updating your name, 
     you can also change your sex marker without any 
-    other documentation. 
+    other documentation.</s> <b>2025 UPDATE: Social Security is a federal agency, so you likely can't change your sex marker anymore.</b>
     <br><br>
     <b>Note: </b> You will need to do this at least a 
     few days before updating your driver's license
@@ -49,8 +49,9 @@
     While you can take and print your own passport photo, 
     I recommend googling to see if there are any nearby 
     places that can take passport photos, like Walgreens or CVS.
-    While you are updating your name, you can also update 
-    your gender marker without any other documentation. 
+    <s>While you are updating your name, you can also update 
+    your gender marker without any other documentation.</s> 
+    <b>2025 UPDATE: Passports are handled by the federal government, so you likely can't change your sex marker anymore.</b>
 </p>
 
 <h4>
@@ -60,10 +61,16 @@
     <a href="https://skiptheline.ncdot.gov/Webapp/Appointment/Index/a7ade79b-996d-4971-8766-97feb75254de" target="_blank" rel="noopener noreferrer">
     here</a>. For the name change, you will need to 
     bring your court order proving your name change. 
-    To update your sex marker, you need to bring an 
-    updated passport with the updated information on it
+    To update your sex marker, <s>you need to bring an 
+    updated passport with the updated information on it</s> 
     (OR <a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">this form</a> filled out, 
-    but the updated passport is much easier).
+    <s>but the updated passport is much easier</s>). <b>2025 UPDATE: While
+         driver's licenses is are handled by the state government, passports aren't (see above), so you will need an alternate method to update your sex marker. 
+         You should be able to still fill out the linked form 
+         (<a href="https://www.ncdot.gov/dmv/downloads/Documents/DL-300.pdf" target="_blank" rel="noopener noreferrer">DL-300</a>).
+          That said, I did not need to fill this out, so I can't provide much more help than that.
+         Sorry.
+        </b>
     </a>
 </p>
 
@@ -93,6 +100,11 @@
     person helping you there may not be aware 
     that you can update sex designation with 
     just an updated passport, as it says on page 6 
-    (speaking from experience).
+    (speaking from experience). 
+    <b>2025 UPDATE: Birth certificates are handled by the state government, but  passports aren't (see above), 
+        so you will need an alternate method to update your sex marker.
+        See page 6 of the linked form to see alternative methods to correct your sex designation
+    </b>
+
 </p>
 <br><br><br>
