--- a/pages/Introduction.html
+++ b/pages/Introduction.html
@@ -8,7 +8,7 @@
     I needed to go through to find all these forms.
     <br><br>
     For context, I went through this process while legally transitioning
-    as an adult (the process is different for people under 18) and living in Wake County, NC during winter of 2024. 
+    as an adult (the process is different for people under 18) and living in Wake County, NC in early 2024. 
     I am not a lawyer, and so I cannot give legal advice (although here are the 
     general statutes on name changes, 
     <a href="https://www.ncleg.net/enactedlegislation/statutes/html/bychapter/chapter_101.html" target="_blank" rel="noopener noreferrer">
@@ -24,6 +24,17 @@
         <img src="images/file-arrow-down-solid.svg" alt="download-icon" class="download-icon">
     </a>
 </div>
+<p>
+    <b>
+        2025 UPDATE: Obviously, some things have changed since early 2024 and I can't keep this fully up to date, but I'll try to point out the likely most affected parts. 
+        Do your own research (sorry) to stay up to date in current legislation and government policy.
+        Major changes are likely going to happen in the parts of this process interacting with the federal government,
+         but the steps interacting with the state government should mostly stay the say (especially if you live in a more liberal area).
+        <br>
+        <br>
+        Stay safe. We are going to get through this.
+    </b>
+</p>
 <br><br>
 
 
